# weekly-shopping

./: .gitignore  Shopping_list.html  pyproject.toml  tree.txt
templates/: email_template.html
weekly_shopping/: config.py  config.toml  dinner_recipes.json  email_utils.py  example_config.toml  run.py  shopping_list.py  utils.py
