[tool.poetry]
name = "weekly-shopping"
version = "0.1.0"
description = ""
authors = ["Steinar <steinar.brandvik.b@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.3"
tomli = "^2.0.1"
pydantic-settings = "^2.2.1"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
